--- a/Testng/test-output/old/Suite/methods.html
+++ b/Testng/test-output/old/Suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eeb2b1">  <td>23/11/22 21:55:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InterviewPreparation.Thirdone()[pri:0, instance:Testng.InterviewPreparation@7e07db1f]">Thirdone</td> 
-  <td>TestNG-test=Test-1@978508707</td>   <td></td> </tr>
+<tr bgcolor="a095a0">  <td>24/01/10 00:21:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="firstclass.run()[pri:0, instance:Testng.firstclass@79e2c065]">run</td> 
+  <td>TestNG-test=Test-1@606508809</td>   <td></td> </tr>
+<tr bgcolor="a095a0">  <td>24/01/10 00:21:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="firstclass.run()[pri:0, instance:Testng.firstclass@79e2c065]">run</td> 
+  <td>TestNG-test=Test-1@606508809</td>   <td></td> </tr>
+<tr bgcolor="a095a0">  <td>24/01/10 00:21:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="firstclass.run()[pri:0, instance:Testng.firstclass@79e2c065]">run</td> 
+  <td>TestNG-test=Test-1@606508809</td>   <td></td> </tr>
+<tr bgcolor="a095a0">  <td>24/01/10 00:21:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="firstclass.run()[pri:0, instance:Testng.firstclass@79e2c065]">run</td> 
+  <td>TestNG-test=Test-1@606508809</td>   <td></td> </tr>
 </table>
